commit new Signed-off-by: HoangTon-99 <ducton1012@gmail.com>

--- a/Swimming/index.html
+++ b/Swimming/index.html
@@ -209,7 +209,7 @@
                         </p>
 
                     </div>
-                    <div class="col-md-5 m-0 p-0 width-block">
+                    <div class="col-5 m-0 p-0 width-block">
                         <img src="./img/anh5.png" class="img-fluid" alt="" />
                     </div>
                 </div>
@@ -268,7 +268,7 @@
     <footer>
         <div class="container">
             <div class="row footer-height">
-                <div class="col-md-6 bg-contact ps-5 contact-content pt-5 text-white">
+                <div class="col-6 bg-contact ps-5 contact-content pt-5 text-white">
                     <h2 class="fs-1 fw-bold">Contacts</h2>
                     <p>Address:Thanh Hoa</p>
                     <h3 class="fw-bold">
@@ -297,7 +297,7 @@
                         
                     </p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-6">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15006.45745240086!2d105.76808466294084!3d19.898499362656672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3136f601305d604f%3A0x3f5b213c3fad069b!2zSG_hurFuZyBQaMaw4bujbmcsIEhv4bqxbmcgSG_DoSwgVGhhbmggSG_DoSwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1633319236256!5m2!1svi!2s"
                         width="100%" height="100%" style="border: 0" allowfullscreen="" ></iframe>
