upload commit yoga Signed-off-by: HoangTon-99 <ducton1012@gmail.com>

--- a/yoga/index.html
+++ b/yoga/index.html
@@ -33,7 +33,7 @@
                             <li class="nav-item px-4 fs-4">
                                 <a class="nav-link" href="#">Online Class</a>
                             </li>
-                            <li class="nav-item px-4 fs-4" >
+                            <li class="nav-item px-4 fs-4">
                                 <a class="nav-link " href="#"> Contact</a>
                             </li>
                         </ul>
@@ -58,7 +58,9 @@
                     <h4>Hatha</h4>
                     <p>lorem ipsum sit amet consecteur adipisicing </p>
                     <hr>
-                    <p><h5>Monday</h5> 20:00 hs.</p>
+                    <p>
+                        <h5>Monday</h5> 20:00 hs.
+                    </p>
                 </div>
                 <div class="col-3 px-3">
                     <img src="./img/smailmain2.png" alt="" class="rounded img-fluid rounded-circle">
@@ -66,7 +68,9 @@
                     <h4>Hatha</h4>
                     <p>lorem ipsum sit amet consecteur adipisicing </p>
                     <hr>
-                    <p><h5>Monday</h5> 20:00 hs.</p>
+                    <p>
+                        <h5>Monday</h5> 20:00 hs.
+                    </p>
                 </div>
                 <div class="col-3 px-3">
                     <img src="./img/smailmain3.png" alt="" class="rounded img-fluid rounded-circle">
@@ -74,24 +78,83 @@
                     <h4>Hatha</h4>
                     <p>lorem ipsum sit amet consecteur adipisicing </p>
                     <hr>
-                    <p><h5>Monday</h5> 20:00 hs.</p>
+                    <p>
+                        <h5>Monday</h5> 20:00 hs.
+                    </p>
                 </div>
-                
+
             </div>
             <div class="d-grid col-2 mx-auto">
                 <button class="btn btn-primary rounded-pill" type="button">Button</button>
-              </div>
+            </div>
         </div>
-        <div class="block2">
-            <div class="container-fluid p-0 m-0">
-                <img src="./img/bigmain1.png" alt="" class="img-fluid">
-                <div class="row">
-                    <div class="col-3">
-                        <img src="./img/sale1.png" alt="" class="img-fluid">
+        <div class="block2 container-fluid p-0 m-0 overflow-hidden">
+            <div class="row position-relative">
+                <img src="./img/bigmain1.png" alt="" class="img-fluid ">
+                <div class="col-3 position-absolute block2-content text-white ">
+                    <img src="./img/sale1.png" alt="" class="img-fluid">
+                    <div class="block2-content-absolute">
                         <h3>SUMMER</h3>
-                        <h3>CLASS</h3>
+                        <h3 class="fw-light">CLASS</h3>
                         <p>22.12.2020</p>
                         <p>24.03.2021</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="block3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <h3>PRACTILE</h3>
+                        <h3>DYNAMICS</h3>
+                        <h4>1. HATHA <p class="fw-light">YOGA</p></h4>
+                    </div>
+                    <div class="col-6">
+                        <img src="./img/smaillmain4.png" class="img-fluid" alt="">
+                        <div class="font-style float-end">
+                            <p>H</p>
+                            <p>A</p>
+                            <p>T</p>
+                            <p>H</p>
+                            <p>A</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="block4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <img src="./img/smaillmain4.png" class="img-fluid" alt="">
+                        <div class="font-style float-start">
+                            <p>H</p>
+                            <p>A</p>
+                            <p>T</p>
+                            <p>H</p>
+                            <p>A</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <h3>PRACTILE</h3>
+                        <h3>DYNAMICS</h3>
+                        <h4>1. HATHA <p class="fw-light">YOGA</p></h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="block5">
+            <div class="container">
+                <div class="row d-flex justify-content-between">
+                    <div class="col-5">
+                        <hr>
+                    </div>
+                    <div class="col-2">
+                        <p class="text-center mt-1">HEALTHY</p>
+                    </div>
+                    <div class="col-5">
+                        <hr>
                     </div>
                 </div>
             </div>
