commit new 2 Signed-off-by: HoangTon-99 <ducton1012@gmail.com>

--- a/yoga/index.html
+++ b/yoga/index.html
@@ -22,19 +22,19 @@
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav">
                             <li class="nav-item px-4">
-                                <a class="nav-link active fs-4" href="#">Home</a>
+                                <a class="nav-link active fs-4 color" href="#">Home</a>
                             </li>
                             <li class="nav-item px-4 fs-4">
-                                <a class="nav-link" href="#">Class</a>
+                                <a class="nav-link color" href="#">Class</a>
                             </li>
-                            <li class="nav-item px-4 fs-4">
-                                <a class="nav-link" href="#">Promo</a>
+                            <li class="nav-item px-4 fs-4 color">
+                                <a class="nav-link color" href="#">Promo</a>
                             </li>
-                            <li class="nav-item px-4 fs-4">
-                                <a class="nav-link" href="#">Online Class</a>
+                            <li class="nav-item px-4 fs-4 color">
+                                <a class="nav-link color" href="#">Online Class</a>
                             </li>
-                            <li class="nav-item px-4 fs-4">
-                                <a class="nav-link " href="#"> Contact</a>
+                            <li class="nav-item px-4 fs-4 color">
+                                <a class="nav-link color" href="#"> Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -42,50 +42,58 @@
             </div>
         </div>
     </header>
+
     <div class="slider">
         <div class="container-fluid p-0 m-0">
-            <img src="./img/slider1.png" class="img-fluid w-100" alt="">
+            <img src="./img/slide1.png" class="img-fluid w-100" alt="">
         </div>
     </div>
     <main>
-        <div class="block1 container">
-            <div class="row justify-content-center">
-                <h2 class="text-center">MEET OUR</h2>
-                <h2 class="text-center">YOGA CLASS</h2>
-                <div class="col-3 px-3">
+        <div class="block1 container my-5">
+            <div class="row justify-content-center mb-4">
+                <div class="block1__title">
+                    <h2 class="text-center fs-1 fw-light letter-sp-3 ">MEET OUR</h2>
+                    <h2 class="text-center fs-1 fw-bold letter-sp-3">YOGA CLASS</h2>
+                </div>
+                <div class="col-3 px-4">
                     <img src="./img/smailmain1.png" alt="" class="rounded img-fluid rounded-circle">
                     <i class="fas fa-ellipsis-v"></i>
-                    <h4>Hatha</h4>
-                    <p>lorem ipsum sit amet consecteur adipisicing </p>
-                    <hr>
-                    <p>
-                        <h5>Monday</h5> 20:00 hs.
-                    </p>
+                    <div class="block1__content ps-4 pt-2">
+                        <h4>Hatha</h4>
+                        <p>lorem ipsum sit amet consecteur adipisicing </p>
+                        <hr>
+                        <p>
+                            <h5>Monday</h5> 20:00 hs.
+                        </p>
+                    </div>
                 </div>
-                <div class="col-3 px-3">
+                <div class="col-3 px-4 mx-4">
                     <img src="./img/smailmain2.png" alt="" class="rounded img-fluid rounded-circle">
                     <i class="fas fa-ellipsis-v"></i>
-                    <h4>Hatha</h4>
-                    <p>lorem ipsum sit amet consecteur adipisicing </p>
-                    <hr>
-                    <p>
-                        <h5>Monday</h5> 20:00 hs.
-                    </p>
+                    <div class="block1__content ps-4 pt-2">
+                        <h4>Hatha</h4>
+                        <p>lorem ipsum sit amet consecteur adipisicing </p>
+                        <hr>
+                        <p>
+                            <h5>Monday</h5> 20:00 hs.
+                        </p>
+                    </div>
                 </div>
-                <div class="col-3 px-3">
+                <div class="col-3 px-4">
                     <img src="./img/smailmain3.png" alt="" class="rounded img-fluid rounded-circle">
                     <i class="fas fa-ellipsis-v"></i>
-                    <h4>Hatha</h4>
-                    <p>lorem ipsum sit amet consecteur adipisicing </p>
-                    <hr>
-                    <p>
-                        <h5>Monday</h5> 20:00 hs.
-                    </p>
+                    <div class="block1__content ps-4 pt-2">
+                        <h4>Hatha</h4>
+                        <p>lorem ipsum sit amet consecteur adipisicing </p>
+                        <hr>
+                        <p>
+                            <h5>Monday</h5> 20:00 hs.
+                        </p>
+                    </div>
                 </div>
-
             </div>
-            <div class="d-grid col-2 mx-auto">
-                <button class="btn btn-primary rounded-pill" type="button">Button</button>
+            <div class="mx-auto text-center">
+                <button class="btn btn-primary rounded-pill letter-sp-3 backgroud fw-bold" type="button">SHOW MORE</button>
             </div>
         </div>
         <div class="block2 container-fluid p-0 m-0 overflow-hidden">
@@ -94,10 +102,10 @@
                 <div class="col-3 position-absolute block2-content text-white ">
                     <img src="./img/sale1.png" alt="" class="img-fluid">
                     <div class="block2-content-absolute">
-                        <h3>SUMMER</h3>
-                        <h3 class="fw-light">CLASS</h3>
-                        <p>22.12.2020</p>
-                        <p>24.03.2021</p>
+                        <h3 class="fs-2 letter-sp-3 fw-bold">SUMMER</h3>
+                        <h3 class="letter-sp-3 fs-2 pb-3">CLASS</h3>
+                        <p class="fs-5">22.12.2020</p>
+                        <p class="fs-5">24.03.2021</p>
                     </div>
                 </div>
             </div>
@@ -108,7 +116,8 @@
                     <div class="col-6">
                         <h3>PRACTILE</h3>
                         <h3>DYNAMICS</h3>
-                        <h4>1. HATHA <p class="fw-light">YOGA</p></h4>
+                        <h4>1. HATHA <p class="fw-light">YOGA</p>
+                        </h4>
                     </div>
                     <div class="col-6">
                         <img src="./img/smaillmain4.png" class="img-fluid" alt="">
@@ -139,7 +148,8 @@
                     <div class="col-6">
                         <h3>PRACTILE</h3>
                         <h3>DYNAMICS</h3>
-                        <h4>1. HATHA <p class="fw-light">YOGA</p></h4>
+                        <h4>1. HATHA <p class="fw-light">YOGA</p>
+                        </h4>
                     </div>
                 </div>
             </div>
