commit complete Signed-off-by: HoangTon-99 <ducton1012@gmail.com>

--- a/BKT_Yoga_Nhom1/index.html
+++ b/BKT_Yoga_Nhom1/index.html
@@ -59,7 +59,7 @@
                     <img src="./img/main1.png" alt="" class="rounded img-fluid rounded-circle">
                     <i class="fas fa-ellipsis-v"></i>
                     <div class="block1__content ps-4 pt-2">
-                        <h4>Hatha</h4>
+                        <h4 class="fw-bold">Hatha</h4>
                         <p>lorem ipsum sit amet consecteur adipisicing...</p>
                         <hr>
                         <p class="fs-5">
@@ -71,7 +71,7 @@
                     <img src="./img/main2.png" alt="" class="rounded img-fluid rounded-circle">
                     <i class="fas fa-ellipsis-v"></i>
                     <div class="block1__content ps-4 pt-2">
-                        <h4>Ashtanga</h4>
+                        <h4 class="fw-bold">Ashtanga</h4>
                         <p>lorem ipsum sit amet consecteur adipisicing... </p>
                         <hr>
                         <p class="fs-5">
@@ -83,7 +83,7 @@
                     <img src="./img/main3.png" alt="" class="rounded img-fluid rounded-circle">
                     <i class="fas fa-ellipsis-v"></i>
                     <div class="block1__content ps-4 pt-2">
-                        <h4>Kundalini</h4>
+                        <h4 class="fw-bold">Kundalini</h4>
                         <p>lorem ipsum sit amet consecteur adipisicing... </p>
                         <hr>
                         <p class="fs-5">
@@ -94,7 +94,7 @@
 
             </div>
             <div class="mx-auto text-center">
-                <button class="btn btn-primary rounded-pill letter-sp-3 btn-color fw-bold" type="button">SHOW
+                <button class="btn btn-primary rounded-pill letter-sp-2 btn-color fw-bold" type="button">SHOW
                     MORE</button>
             </div>
         </div>
@@ -124,16 +124,16 @@
                                 of Patanjali and other classical texts such as Bhagavad Gita and Hatha Yoga Pradipika.
                             </p>
                             <hr>
-                            <h3 class="fs-4 pt-3">10 modulles</h3>
-                            <h3 class="fs-4 pb-5">divided into 7 weekkends</h3>
+                            <h3 class="fs-4 pt-3 fw-bold">10 modulles</h3>
+                            <h3 class="fs-4 pb-5 fw-bold">divided into 7 weekkends</h3>
                             <div class="row">
                                 <div class="col-5">
-                                    <h3 class="fs-4">Start</h3>
+                                    <h3 class="fs-4 fw-bold">Start</h3>
                                     <p>April 15</p>
                                     <p>20.00 hs</p>
                                 </div>
                                 <div class="col-5">
-                                    <h3 class="fs-4">Price</h3>
+                                    <h3 class="fs-4 fw-bold">Price</h3>
                                     <p>$900</p>
                                 </div>
                             </div>
@@ -174,16 +174,16 @@
                                 origin is in the Raya Yoga of Patanjali and other classical texts such as Bhagavad Gita
                                 and Hatha Yoga Pradipika.</p>
                             <hr>
-                            <h3 class="fs-4 pt-3">17 modulles</h3>
-                            <h3 class="fs-4 pb-5">divided into 5 weekkends</h3>
+                            <h3 class="fs-4 pt-3 fw-bold">17 modulles</h3>
+                            <h3 class="fs-4 pb-5 fw-bold">divided into 5 weekkends</h3>
                             <div class="row">
                                 <div class="col-5">
-                                    <h3 class="fs-4">Start</h3>
+                                    <h3 class="fs-4 fw-bold">Start</h3>
                                     <p>April 15</p>
                                     <p>20.00 hs</p>
                                 </div>
                                 <div class="col-5">
-                                    <h3 class="fs-4">Price</h3>
+                                    <h3 class="fs-4 fw-bold">Price</h3>
                                     <p>$900</p>
                                 </div>
                             </div>
@@ -199,7 +199,7 @@
                         <hr>
                     </div>
                     <div class="col-2">
-                        <p class="text-center fs-2 ">HEALTHY</p>
+                        <p class="text-center fs-2 fw-bold">HEALTHY</p>
                         <p class="fs-2 fw-light text-center">LIFE</p>
                     </div>
                     <div class="col-5 mt-2">
@@ -209,18 +209,18 @@
                 <div class="row justify-content-between mt-5">
                     <div class="col-4 text-center">
                         <img src="./img/main6.png" alt="">
-                        <h3 class="py-4">EXERCISE</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo posuere</p>
+                        <h3 class="py-4 fw-bold">EXERCISE</h3>
+                        <p>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Explicabo <br> posuere</p>
                     </div>
                     <div class="col-4 text-center">
                         <img src="./img/main7.png" alt="">
-                        <h3 class="py-4">FEEDING</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo posuere</p>
+                        <h3 class="py-4 fw-bold">FEEDING</h3>
+                        <p>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Explicabo <br> posuere</p>
                     </div>
                     <div class="col-4 text-center">
                         <img src="./img/main8.png" alt="">
-                        <h3 class="py-4">MEDITATION</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo posuere</p>
+                        <h3 class="py-4 fw-bold">MEDITATION</h3>
+                        <p>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Explicabo <br> posuere</p>
                     </div>
                 </div>
             </div>
@@ -236,7 +236,7 @@
                     <img src="./img/main9.jpg" alt="" class="rounded img-fluid rounded-circle text-center">
                     <i class="fas fa-ellipsis-v"></i>
                     <div class="block1__content ps-4 pt-2">
-                        <h4>Anusara</h4>
+                        <h4 class="fw-bold">Anusara</h4>
                         <p>lorem ipsum sit amet consecteur adipisicing...</p>
                         <hr>
                         <p class="fs-5">
@@ -248,7 +248,7 @@
                     <img src="./img/main10.jpg" alt="" class="rounded img-fluid rounded-circle text-center">
                     <i class="fas fa-ellipsis-v"></i>
                     <div class="block1__content ps-4 pt-2">
-                        <h4>Kripalu</h4>
+                        <h4 class="fw-bold">Kripalu</h4>
                         <p>lorem ipsum sit amet consecteur adipisicing... </p>
                         <hr>
                         <p class="fs-5">
@@ -260,7 +260,7 @@
                     <img src="./img/main11.jpg" alt="" class="rounded img-fluid rounded-circle text-center">
                     <i class="fas fa-ellipsis-v"></i>
                     <div class="block1__content ps-4 pt-2">
-                        <h4>Bharata</h4>
+                        <h4 class="fw-bold">Bharata</h4>
                         <p>lorem ipsum sit amet consecteur adipisicing... </p>
                         <hr>
                         <p class="fs-5">
@@ -270,7 +270,7 @@
                 </div>
             </div>
             <div class="mx-auto text-center">
-                <button class="btn btn-primary rounded-pill letter-sp-3 btn-color fw-bold" type="button">SHOW
+                <button class="btn btn-primary rounded-pill letter-sp-2 btn-color fw-bold" type="button">SHOW
                     MORE</button>
             </div>
         </div>
@@ -295,8 +295,8 @@
                                 <h3 class="fs-1 letter-sp-3">YOGA INITIATION</h3>
                                 <h3 class="fs-1 fw-light fw-bold letter-sp-3">WORKSHOP</h3>
                                 <div class="pt-5">
-                                    <p class="letter-sp-3 fw-bold fs-4">TRY YOUR FIRTS FREE</p>
-                                    <p class="letter-sp-3 fw-bold fs-4">YOGA CLASS</p>
+                                    <p class="letter-sp-2 fw-bold fs-4">TRY YOUR FIRTS FREE</p>
+                                    <p class="letter-sp-2 fw-bold fs-4">YOGA CLASS</p>
 
                                     <h3 class="fs-4 pt-5">22.12.2020</h3>
                                     <h3 class="fs-4 pt-3">24.03.2021</h3>
