--- a/BKT_Yoga_Nhom1/Giang/giang.html
+++ b/BKT_Yoga_Nhom1/Giang/giang.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
     <link rel="stylesheet" href="giang.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="SAAS/node_modules/bootstrap/dist/css/bootstrap.min.css">
-     
 </head>
+
 <body>
     <footer>
         <div class="footer-margin">
             <div class="container text-center title">
-                <img class="mb-5" src="./img/logo2.png" alt="">
+                <img class="mb-5" src="../img/logo2.png" alt="">
                 <h3 class="text-uppercase letter-sp-1 lh-base fw-bold mb-5">the asanas purify our body and keep it <br>
                     healthy, making it a suitable vehicle for <br> the soul.</h3>
             </div>
@@ -24,7 +25,7 @@
                         <h4 class="fw-bold">ABOUT</h4>
                         <p> Lorem ipsum dolor sit amet, consec <br> tetur adipsocing elit, sed do eiusmod tempor
                             incididunt <br> ultimam quantum</p>
-                        <img src="./img/logo.png" alt="">
+                        <img src="../img/logo.png" alt="">
                     </div>
                     <div class="col-md-2">
                         <ul class="list ">
@@ -64,4 +65,5 @@
         </div>
     </footer>
 </body>
+
 </html>
