upload commit complete Signed-off-by: HoangTon-99 <ducton1012@gmail.com>

--- a/BKT_Yoga_Nhom1/index.html
+++ b/BKT_Yoga_Nhom1/index.html
@@ -52,8 +52,8 @@
         <div class="block1 container mb-5">
             <div class="row justify-content-around mb-4">
                 <div class="block__title">
-                    <h2 class="text-center fs-1 fw-light letter-sp-3 ">MEET OUR</h2>
-                    <h2 class="text-center fs-1 fw-bold letter-sp-3">YOGA CLASS</h2>
+                    <h2 class="text-center fs-1 fw-light letter-sp-2 ">MEET OUR</h2>
+                    <h2 class="text-center fs-1 fw-bold letter-sp-2">YOGA CLASS</h2>
                 </div>
                 <div class="col-3 px-4">
                     <img src="./img/main1.png" alt="" class="rounded img-fluid rounded-circle">
@@ -104,8 +104,8 @@
                 <div class="col-3 position-absolute block2-content text-white ">
                     <img src="./img/sale1.png" alt="" class="img-fluid">
                     <div class="block2-content-absolute">
-                        <h3 class="fs-2 letter-sp-3 fw-bold">SUMMER</h3>
-                        <h3 class="letter-sp-3 fs-2 pb-3">CLASS</h3>
+                        <h3 class="fs-2 letter-sp-2 fw-bold">SUMMER</h3>
+                        <h3 class="2 fs-2 pb-3">CLASS</h3>
                         <p class="fs-5 fw-bold pt-2">22.12.2020</p>
                         <p class="fs-5 fw-bold">24.03.2021</p>
                     </div>
@@ -116,10 +116,10 @@
             <div class="container margin-t mb-5">
                 <div class="row justify-content-between">
                     <div class="col-5 ps-5">
-                        <h3 class="fs-1 fw-bold letter-sp-3">PRACTILE</h3>
-                        <h3 class="fs-1 fw-light letter-sp-3">DYNAMICS</h3>
+                        <h3 class="fs-1 fw-bold letter-sp-2">PRACTILE</h3>
+                        <h3 class="fs-1 fw-light letter-sp-2">DYNAMICS</h3>
                         <div class="block3__content pt-4">
-                            <p class="letter-sp-3 fw-light fs-4"><b class="fs-4 fw-bold">1. HATHA </b>YOGA</p>
+                            <p class="letter-sp-2 fw-light fs-4"><b class="fs-4 fw-bold">1. HATHA </b>YOGA</p>
                             <p class="py-3 letter-sp-1">Hatha is the most classic yoga. Its origin is in the Raya Yoga
                                 of Patanjali and other classical texts such as Bhagavad Gita and Hatha Yoga Pradipika.
                             </p>
@@ -166,10 +166,10 @@
                         </div>
                     </div>
                     <div class="col-5 ps-5">
-                        <h3 class="fs-1 fw-bold letter-sp-3">POSITIONS</h3>
-                        <h3 class="fs-1 fw-light letter-sp-3">DYNAMICS</h3>
+                        <h3 class="fs-1 fw-bold letter-sp-2">POSITIONS</h3>
+                        <h3 class="fs-1 fw-light letter-sp-2">DYNAMICS</h3>
                         <div class="block4__content pt-4">
-                            <p class="letter-sp-3 fw-light fs-4"><b class="fs-4 fw-bold">2. KUNDALINI </b>YOGA</p>
+                            <p class="letter-sp-2 fw-light fs-4"><b class="fs-4 fw-bold">2. KUNDALINI </b>YOGA</p>
                             <p class="py-3 letter-sp-1">Kundalini is the most classic yoga. Its
                                 origin is in the Raya Yoga of Patanjali and other classical texts such as Bhagavad Gita
                                 and Hatha Yoga Pradipika.</p>
@@ -229,8 +229,8 @@
         <div class="block6 container mb-5">
             <div class="row justify-content-around mb-4">
                 <div class="block__title">
-                    <h2 class="text-center fs-1 fw-light letter-sp-3 ">LOOK AT OUR</h2>
-                    <h2 class="text-center fs-1 fw-bold letter-sp-3">SUMMER CLASSRES</h2>
+                    <h2 class="text-center fs-1 fw-light letter-sp-2 ">LOOK AT OUR</h2>
+                    <h2 class="text-center fs-1 fw-bold letter-sp-2">SUMMER CLASSRES</h2>
                 </div>
                 <div class="col-3 px-4">
                     <img src="./img/main9.jpg" alt="" class="rounded img-fluid rounded-circle text-center">
@@ -292,8 +292,8 @@
                                 <p>N</p>
                             </div>
                             <div class="col-9 ms-4">
-                                <h3 class="fs-1 letter-sp-3">YOGA INITIATION</h3>
-                                <h3 class="fs-1 fw-light fw-bold letter-sp-3">WORKSHOP</h3>
+                                <h3 class="fs-1 letter-sp-2">YOGA INITIATION</h3>
+                                <h3 class="fs-1 fw-light fw-bold letter-sp-2">WORKSHOP</h3>
                                 <div class="pt-5">
                                     <p class="letter-sp-2 fw-bold fs-4">TRY YOUR FIRTS FREE</p>
                                     <p class="letter-sp-2 fw-bold fs-4">YOGA CLASS</p>
