upload commit complete Signed-off-by: HoangTon-99 <ducton1012@gmail.com>

--- a/BKT_Yoga_Nhom1/Ton/ton.html
+++ b/BKT_Yoga_Nhom1/Ton/ton.html
@@ -94,7 +94,7 @@
 
             </div>
             <div class="mx-auto text-center">
-                <button class="btn btn-primary rounded-pill letter-sp-3 btn-color fw-bold" type="button">SHOW
+                <button class="btn btn-primary rounded-pill letter-sp-3 btn-color fw-bold shadow" type="button">SHOW
                     MORE</button>
             </div>
         </div>
@@ -270,7 +270,7 @@
                 </div>
             </div>
             <div class="mx-auto text-center">
-                <button class="btn btn-primary rounded-pill letter-sp-3 btn-color fw-bold" type="button">SHOW
+                <button class="btn btn-primary rounded-pill letter-sp-3 btn-color fw-bold shadow" type="button">SHOW
                     MORE</button>
             </div>
         </div>
